Annotate & generate swagger for get file
